# eth-light-client-in-ckb

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
prover/: Cargo.toml
prover/src/: cached_block.rs  dummy_light_client.rs  lib.rs  light_client_bootstrap.rs  light_client_update.rs  receipts.rs
tests/: .gitignore
tests/data/mainnet/: beacon_genesis.json
tests/data/mainnet/beacon/: block-header-slot-5246089.json  block-header-slot-5246094.json  block-header-slot-5246096.json  block-header-slot-5246098.json  block-header-slot-5246101.json  block-header-slot-5246102.json  block-header-slot-5246103.json  block-header-slot-5246104.json  block-header-slot-5246106.json  block-header-slot-5246107.json  block-header-slot-5246109.json  block-header-slot-5246110.json  block-header-slot-5246114.json  block-header-slot-5246115.json  block-header-slot-5246116.json  block-header-slot-5246117.json  block-header-slot-5246118.json  block-header-slot-5246119.json  block-header-slot-5246120.json  block-header-slot-5246121.json  block-header-slot-5246122.json  block-header-slot-5246129.json  block-header-slot-5246130.json  block-header-slot-5246131.json  block-header-slot-5246132.json  block-header-slot-5246133.json  block-header-slot-5246134.json  block-header-slot-5246135.json  block-header-slot-5246136.json  block-header-slot-5246137.json  block-header-slot-5246138.json  block-header-slot-5246139.json  block-header-slot-5246140.json  block-header-slot-5246142.json  block-header-slot-5246144.json  block-header-slot-5246145.json  block-header-slot-5246146.json  block-header-slot-5246151.json  block-slot-5246088.json  block-slot-5246089.json  (+36 more)
tests/data/mainnet/beacon/block/: slot-006632854.json
tests/data/mainnet/beacon/header/: slot-006632737.json  slot-006632738.json  slot-006632739.json  slot-006632740.json  slot-006632741.json  slot-006632742.json  slot-006632743.json  slot-006632744.json  slot-006632745.json  slot-006632746.json  slot-006632747.json  slot-006632748.json  slot-006632749.json  slot-006632750.json  slot-006632751.json  slot-006632752.json  slot-006632753.json  slot-006632754.json  slot-006632755.json  slot-006632756.json  slot-006632757.json  slot-006632758.json  slot-006632759.json  slot-006632760.json  slot-006632761.json  slot-006632763.json  slot-006632764.json  slot-006632765.json  slot-006632767.json  slot-006632768.json  slot-006632770.json  slot-006632771.json  slot-006632772.json  slot-006632773.json  slot-006632774.json  slot-006632775.json  slot-006632776.json  slot-006632777.json  slot-006632778.json  slot-006632779.json  (+149 more)
tests/data/mainnet/case-1/beacon/: block-header-slot-5246088.json  block-header-slot-5246090.json  block-header-slot-5246091.json  block-header-slot-5246092.json  block-header-slot-5246093.json  block-header-slot-5246095.json  block-header-slot-5246097.json  block-header-slot-5246099.json  block-header-slot-5246100.json  block-header-slot-5246105.json  block-header-slot-5246108.json  block-header-slot-5246111.json  block-header-slot-5246112.json  block-header-slot-5246113.json  block-header-slot-5246123.json  block-header-slot-5246124.json  block-header-slot-5246125.json  block-header-slot-5246126.json  (+34 more)
tests/data/mainnet/execution/: block-receipts-number-16079968.json  block-receipts-number-16079970.json  block-receipts-number-16079971.json  block-receipts-number-16079973.json  block-receipts-number-16079974.json  block-receipts-number-16079975.json  block-receipts-number-16079976.json  block-receipts-number-16079979.json  block-receipts-number-16079983.json  block-receipts-number-16079984.json  block-receipts-number-16079987.json  block-receipts-number-16079989.json  block-receipts-number-16079990.json  block-receipts-number-16079992.json  block-receipts-number-16079993.json  block-receipts-number-16079995.json  block-receipts-number-16079996.json  block-receipts-number-16079998.json  block-receipts-number-16079999.json  block-receipts-number-16080000.json  block-receipts-number-16080003.json  block-receipts-number-16080004.json  block-receipts-number-16080005.json  block-receipts-number-16080006.json  block-receipts-number-16080007.json  block-receipts-number-16080014.json  block-receipts-number-16080015.json  block-receipts-number-16080020.json  block-receipts-number-16080025.json  block-receipts-number-16080027.json  block-receipts-number-16080028.json  block-receipts-number-16080029.json
verification/: Cargo.toml
verification/schemas/: types.mol
verification/src/: error.rs  lib.rs  log.rs
verification/src/consensus_specs/: altair.rs  bellatrix.rs  capella.rs  helpers.rs  internal.rs  macros.rs  mod.rs  phase0.rs
verification/src/consensus_specs/forks/: altair.rs  bellatrix.rs  capella.rs  mod.rs  phase0.rs
verification/src/constants/: consensus_specs.rs  generalized_index_offsets.rs  mod.rs
verification/src/constants/consensus_specs/: altair.rs  bellatrix.rs  capella.rs  mod.rs
verification/src/constants/generalized_index_offsets/: bellatrix.rs  capella.rs  mod.rs
verification/src/tests/: mod.rs  types.rs
verification/src/tests/types/: headers_update.rs  mod.rs  proof_update.rs  transaction.rs  transaction_verification.rs
verification/src/tests/utilities/: mmr.rs  mod.rs  ssz.rs  trie.rs
verification/src/types/: core.rs  mod.rs  prelude.rs
verification/src/types/conversion/: pack.rs  unpack.rs
verification/src/types/extension/: core.rs  mod.rs
verification/src/utilities/: bls.rs  mmr.rs  mod.rs  mpt.rs  ssz.rs  trie.rs
verification/tests/: mod.rs
verification/tests/types/: client_bootstrap.rs  client_update.rs  mod.rs  sync_committee_update.rs  transaction_verification.rs
verification/tests/utilities/: mmr.rs  mod.rs  mpt.rs  ssz.rs
(+803 files in other folders)
