[package]
name = "eth-light-client-in-ckb"
version = "0.1.0-alpha.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2021"
license = "MIT"
description = "ETH Light Client in CKB."
homepage = "https://github.com/yangby-cryptape/eth-light-client-in-ckb"
repository = "https://github.com/yangby-cryptape/eth-light-client-in-ckb"

[dependencies]
