[package]
name = "eth_light_client_in_ckb-prover"
version = "0.3.0-alpha"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2021"
license = "MIT"
description = "ETH Light Client in CKB (the prover part)."
homepage = "https://github.com/synapseweb3/eth-light-client-in-ckb"
repository = "https://github.com/synapseweb3/eth-light-client-in-ckb"

[dependencies]
eth_light_client_in_ckb-verification = { version = "0.3.0-alpha", path = "../verification" }
ethers-core = "2.0.2"
cita_trie = "4.0.0"
hasher = "0.1.4"
eth2_types       = { git = "https://github.com/synapseweb3/lighthouse", rev = "2c246d6", package = "types" }
tree_hash        = { git = "https://github.com/synapseweb3/lighthouse", rev = "2c246d6" }
merkle_proof     = { git = "https://github.com/synapseweb3/lighthouse", rev = "2c246d6" }
