[package]
name = "eth_light_client_in_ckb-verification"
version = "0.1.0-alpha.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2021"
license = "MIT"
description = "ETH Light Client in CKB (the verification part)."
homepage = "https://github.com/yangby-cryptape/eth-light-client-in-ckb"
repository = "https://github.com/yangby-cryptape/eth-light-client-in-ckb"

[dependencies]
molecule         = { version = "=0.7.3", default-features = false }
ckb-mmr          = { version = "0.5.1", default-features = false, package = "ckb-merkle-mountain-range" }
rlp              = { version = "0.5.2", default-features = false }
tiny-keccak      = { version = "2.0.2", features = ["keccak"] }
eth2_hashing     = { version = "0.3.0", default-features = false, git = "https://github.com/yangby-cryptape/lighthouse", rev = "62dc610" }
eth2_ssz         = { version = "0.4.1", default-features = false, git = "https://github.com/yangby-cryptape/lighthouse", rev = "62dc610" }
eth2_ssz_types   = { version = "0.2.2", default-features = false, git = "https://github.com/yangby-cryptape/lighthouse", rev = "62dc610" }
tree_hash        = { version = "0.4.1", default-features = false, git = "https://github.com/yangby-cryptape/lighthouse", rev = "62dc610" }
merkle_proof     = { version = "0.2.0", default-features = false, git = "https://github.com/yangby-cryptape/lighthouse", rev = "62dc610" }
eth2_ssz_derive  = { git = "https://github.com/yangby-cryptape/lighthouse", rev = "62dc610" }
tree_hash_derive = { git = "https://github.com/yangby-cryptape/lighthouse", rev = "62dc610" }
eth2_types       = { git = "https://github.com/yangby-cryptape/lighthouse", rev = "62dc610", package = "types", optional = true }
log              = { version = "0.4.17", optional = true }

[dev-dependencies]
eth_light_client_in_ckb-prover = { version = "0.1.0-alpha.0", path = "../prover" }
serde_json = "1.0"
walkdir = "2.3.2"
ethers-core = "1.0.2"
env_logger = "0.10.0"

[features]
default = ["std"]
std = [
    "molecule/std",
    "ckb-mmr/std",
    "rlp/std",
    "eth2_types",
    "log"
]
